[package]
name = "hpm_isp"
version = "0.1.0"
edition = "2021"
authors = ["tfx2001 <2479727366@qq.com>"]
license = "MIT"
description = "ISP tool for HPMicro MCUs."
repository = "https://github.com/tfx2001/hpm_isp"

[dependencies]
clap = { version = "3.1", features = ["color", "derive"] }
hidapi = "1.4.1"
indicatif = "0.16.2"
zerocopy = "0.6.1"
num_enum = "0.5.7"
