[package]
name = "hpm_isp"
version = "0.4.0"
edition = "2021"
authors = ["tfx2001 <tfx2001@outlook.com>"]
license = "MIT"
description = "ISP tool for HPMicro MCUs."
repository = "https://github.com/tfx2001/hpm_isp"

[dependencies]
clap = { version = "3.1", features = ["color", "derive"] }
hidapi = "2.4"
indicatif = "0.17"
dialoguer = "0.10"
zerocopy = { version = "0.7", features = ["derive"] }
num_enum = "0.7"
hpm-rt = "0.1"
strum = { version = "0.25", features = ["derive"] }
